# czech-plus

./: .cruft.json  .gitignore  .readthedocs.yml  CONFIG.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  optimize_for_build.py  upload_to_anki.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: deploy-pypi.yml  test.yml
czech_plus/: __init__.py  anki_collection.py  config.py  models.py  utils.py
czech_plus/_vendor/: README.md  __init__.py  requirements.txt
czech_plus/logic/: __init__.py  compiler.py  hooks.py
czech_plus/logic/lexer/: __init__.py  tokens.py
czech_plus/logic/processor/: __init__.py
czech_plus/logic/processor/implementations/: __init__.py  adjective.py  base.py  noun.py  verb.py
docs/: conf.py  index.rst
docs/_autoapi_templates/python/: data.rst
docs/pages/specification/: adjective.rst  general_syntax.rst  noun.rst  verb.rst
templates/: adjective.html  noun.html  verb.html
tests/: __init__.py  conftest.py  factories.py  test_config.py  test_models.py
tests/test_logic/: __init__.py  test_compiler.py  test_implementations.py  test_lexers.py  test_processors.py
