[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "czech-plus"
description = "My addon to learn Czech"
version = "0.1.0"
license = "GPL3"
authors = []
readme = "README.md"
repository = "https://github.com/PerchunPak/czech-plus"


[tool.poetry.dependencies]
python = "~3.9"

aqt = {extras = ["qt6"], version = "~2"}
loguru = "^0.6.0"


[tool.poetry.group.make.dependencies]
black = "~22"
isort = "~5.10"
pycln = "~2.1"
mypy = "*"  # dependabot can't update non semver dependencies with our config, see e9376da in fire-square-style
flake8 = "~5"
flake8-docstrings = "~1"
pydocstyle = ">=4.0.0"
safety = "~2.3"

pre-commit = "~2.20"


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~1.4"
pytest-randomly = "~3.12"
Faker = "~15.1"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"


[tool.black]
line-length = 120
target-version = ['py310']
