[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "czech-plus"
description = "My addon to learn Czech"
version = "0.1.0"
license = "GPL3"
authors = []
readme = "README.md"
repository = "https://github.com/PerchunPak/czech-plus"


[tool.poetry.dependencies]
python = "~3.9"

aqt = {extras = ["qt6"], version = "~2"}

# see `czech_plus._vendor`'s README
vendoring = "~1.2"


[tool.poetry.group.make.dependencies]
black = "~22"
isort = "~5.10"
pycln = "~2.1"
doc8 = "~1.0"
mypy = "*"  # dependabot can't update non semver dependencies with our config, see e9376da in python-template
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.12"
lice = "~0.6"  # for generating template

pre-commit = "~2.20"


[tool.poetry.group.tests.dependencies]
pytest = "~7.2"
pytest-cov = "~4.0"
pytest-mock = "~3.10"
pytest-testmon = "~1.4"
pytest-randomly = "~3.12"

factory-boy = "~3.2"
Faker = "~15.3"


[tool.poetry.group.docs.dependencies]
sphinx = "~5.3"
sphinx-autodoc-typehints = "~1.19"
sphinx-autoapi = "~2.0"
sphinx-intl = "~2.0"  # only for locales
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "21.3"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.28"
GitPython = "~3.1"


[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.deploy.dependencies]
webbot = ">=0.34"  # doesn't follow semantic versioning :(


[tool.poetry.group.types.dependencies]
types-markdown = "*"
types-decorator = "*"
types-mock = "*"
types-protobuf = "*"
types-requests = "*"
types-setuptools = "*"
types-waitress = "*"


[tool.vendoring]
destination = "czech_plus/_vendor/"
requirements = "czech_plus/_vendor/requirements.txt"
namespace = "czech_plus._vendor"

protected-files = ["__init__.py", "README.md", "requirements.txt"]


[tool.vendoring.transformations]
substitute = [
  {match = 'import win32_setctime', replace = 'from czech_plus._vendor import win32_setctime'}
]

[tool.black]
line-length = 120
target-version = ['py39']
