[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "czech-plus"
description = "My addon to learn Czech"
version = "0.1.0"
license = "GPL3"
authors = []
readme = "README.md"
repository = "https://github.com/PerchunPak/czech-plus"


[tool.poetry.dependencies]
python = "~3.9"

aqt = {extras = ["qt6"], version = "~23"}

# see `czech_plus._vendor`'s README
vendoring = "~1.2"


[tool.poetry.group.make.dependencies]
black = "~23"
isort = "~5.12"
pycln = "~2.2"
doc8 = "~1.1"
mypy = "~1.4"
flake8 = "~6"
flake8-docstrings = "~1"
flake8-ensure-ascii = "~1.0"
pydocstyle = ">=4.0.0"
safety = "~2.3"
cruft = "~2.15"
lice = "~0.6"  # for generating template

pre-commit = "~3.3"


[tool.poetry.group.tests.dependencies]
pytest = "~7.4"
pytest-cov = "~4.1"
pytest-mock = "~3.11"
pytest-testmon = "~2.0"
pytest-randomly = "~3.13"

factory-boy = "~3.3"
Faker = "~19.3"


[tool.poetry.group.docs.dependencies]
sphinx = "~7.1"
sphinx-autodoc-typehints = "~1.24"
sphinx-autoapi = "~2.1"
sphinx-intl = "~2.1"  # only for locales
furo = "*"
m2r2 = "~0.3"
tomli = { version = "~2.0", markers = "python_version < '3.11'" }
packaging = "23.1"


[tool.poetry.group.github_hooks]
optional = true

[tool.poetry.group.github_hooks.dependencies]
requests = "~2.31"
GitPython = "~3.1"


[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.deploy.dependencies]
webbot = ">=0.34"  # doesn't follow semantic versioning :(


[tool.poetry.group.types.dependencies]
types-markdown = "*"
types-decorator = "*"
types-mock = "*"
types-protobuf = "*"
types-requests = "*"
types-setuptools = "*"
types-waitress = "*"


[tool.vendoring]
destination = "czech_plus/_vendor/"
requirements = "czech_plus/_vendor/requirements.txt"
namespace = "czech_plus._vendor"

protected-files = ["__init__.py", "README.md", "requirements.txt"]


[tool.vendoring.transformations]
substitute = [
  {match = 'import win32_setctime', replace = 'from czech_plus._vendor import win32_setctime'}
]

[tool.black]
line-length = 120
target-version = ['py39']
